# adheslime.dll

./: .gitignore  Adheslime.cpp  CMakeLists.txt  ComponentSystem.hpp  HardwareProfiler.hpp  README.md  VfsManager.hpp  host.cpp  packed_rules.gen.h  retpoline.asm  tester.cpp
.github/workflows/: ci.yml
build2/: cmake_install.cmake
examples/: Host.cpp
include/adheslime/: Sdk.h
include/bigbro/: Sdk.h  attestation_pubkey.h
rules/: check_debugger.js  check_integrity.js  check_processes.js
src/: Attestation.cpp  Common.h  CustomComponents.cpp  Detection.cpp  Detection.h  Exports.cpp  JsEngine.cpp  JsEngine.h  Obfuscation.h  Sdk.cpp  StealthImport.h  Syscalls.cpp  Syscalls.h  Vfs.cpp  Vfs.h  attestation_key.gen.h  bigbro.def  packed_rules.gen.h  retpoline.asm  syscalls.asm
tests/: Tester.cpp
tools/: gen_attestation_key.py  obfuscate_pe.py  pack_rules.py
